--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install slidev
         run:  npm i -g @slidev/cli
       - name: Build
-        run: slidev build --base course-HU-2023
+        run: slidev build --base template-slidev-UiT
       - name: Deploy pages
         uses: crazy-max/ghaction-github-pages@v2
         with:
